Sat Dec 13 18:25:15 UTC 2008  Ciju John  <johnc at ociweb dot com>

        * bin/tao_other_tests.lst:
          Accidently turned on a future test. Reverting the same.

Fri Dec 12 19:23219 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Disabled ICMG_Any_Bug for CORBA/e

Fri Dec 12 13:26:19 UTC 2008  Olli Savia  <ops@iki.fi>

        * NEWS:
          Added a note about ACE::isdotdir().

Fri Dec 12 13:17:43 UTC 2008  Olli Savia  <ops@iki.fi>

        * tests/Dirent_Test.cpp:
          Updated to use new isdotdir() funtion.

Fri Dec 12 13:08:58 UTC 2008  Olli Savia  <ops@iki.fi>

        * ace/ACE.h:
        * ace/ACE.inl:
          Added a new function isdotdir() which determines if a specified
          pathname is "dot dir" (ie. "." or ".."). isdotdir() is significantly
          faster than pair of strcmp() calls.

Thu Dec 11 23:08:07 UTC 2008  Ciju John  <johnc at ociweb dot com>

        * bin/tao_other_tests.lst:
          Disabled some IFR_Service dependent tests for uses_wchar builds.

Thu Dec 11 14:34:23 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * m4/ace_func.m4:

          Update ACE_FUNC_SYSINFO feature test to compile small programs
          that use the two different Linux and SysV/POSIX sysinfo() APIs
          before defining ACE_HAS_SYSV_SYSINFO or ACE_HAS_LINUX_SYSINFO.
          This should avoid false matches with HP/UX's undocumented
          sysinfo() syscall.

Wed Dec 10 21:06:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debianbuild/rules:
          Removed old line

Tue Dec  9 16:32:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/split-cpp:
        * bin/split-cpp.pl:
          Renamed to have pl extension

        * debianbuild/patches/00list:
          Updated

        * debianbuild/patches/03-g++-new-throws.dpatch:
        * debianbuild/patches/08-fix-perl-shebang.dpatch:
        * debianbuild/patches/90-patch-mpc-basedir.dpatch: