@@ -291,6 +291,15 @@ ACE::isdotdir (const char *s)
 	  ((s[1] == 0) || (s[1] == '.' && s[2] == 0)));
 }
 
+#if defined (ACE_HAS_WCHAR)
+ACE_INLINE bool
+ACE::isdotdir (const wchar_t *s)
+{
+  return (s[0] == ACE_TEXT ('.') && 
+	  ((s[1] == 0) || (s[1] == ACE_TEXT ('.') && s[2] == 0)));
+}
+#endif /* ACE_HAS_WCHAR */
+
 ACE_INLINE void
 ACE::unique_name (const void *object,
                   ACE_TCHAR *name,
